--- a/views/fechas/pquesaavedra.erb
+++ b/views/fechas/pquesaavedra.erb
@@ -59,7 +59,7 @@
                         <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda4.jpg" style="width:100%">
                         <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda5.jpg" style="width:100%">
                         <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda7.jpg.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda7.jpg" style="width:100%">
                         <img class="mySlides" src="/imagenes/galeria/fechas/pquesaavedra1-10/banda8.jpg" style="width:100%">
 
                         <div class="w3-row w3-black w3-center">
