--- a/views/fechas/salon.erb
+++ b/views/fechas/salon.erb
@@ -9,80 +9,86 @@
     <br>
     <br>
     <br>
-
+/imagenes/galeria/fechas/salon3-9/banda1.jpg
     <body>
-        <div class="w3-row-padding w3-margin-top">
+      <div class="w3-container">
+          <div class="w3-row-padding w3-margin-top" style="margin:0 -16px">
+              <div class="w3-col s3">
+                  <img src="s3/imagenes/galeria/fechas/salon3-9/banda1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+              </div>
+              <div class="w3-col s3">
+                  <img src="s3/imagenes/galeria/fechas/salon3-9/banda2.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+              </div>
+              <div class="w3-col s3">
+                  <img src="s3/imagenes/galeria/fechas/salon3-9/banda3.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+              </div>
+              <div class="w3-col s3">
+                  <img src="s3/imagenes/galeria/fechas/salon3-9/banda4.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+              </div>
+              <div class="w3-col s3">
+                  <img src="s3/imagenes/galeria/fechas/salon3-9/banda5.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+              </div>
 
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/salon3-9/banda2.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/salon3-9/banda3.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/salon3-9/banda4.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-        </div>
+              <div class="w3-col s3">
+                  <img src="s3/imagenes/galeria/fechas/salon3-9/banda6.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+              </div>
+              <div class="w3-col s3">
+                  <img src="s3/imagenes/galeria/fechas/salon3-9/banda7.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+              </div>
+              <div class="w3-col s3">
+                  <img src="s3/imagenes/galeria/fechas/salon3-9/banda8.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+              </div>
+          </div>
 
-        <div class="w3-row-padding w3-margin-top">
+          <div id="myModal" class="w3-modal w3-black">
+              <span class="w3-text-white w3-xxlarge w3-hover-text-grey w3-container w3-display-topright cursor" onclick="closeModal()">&times;</span>
 
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/salon3-9/banda5.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/salon3-9/banda6.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/salon3-9/banda7.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
+              <div class="w3-modal-content">
+                  <div class="w3-content" style="max-width:1200px">
+                      <img class="mySlides" src="s3/imagenes/galeria/fechas/salon3-9/banda1.jpg" style="width:100%">
+                      <img class="mySlides" src="s3/imagenes/galeria/fechas/salon3-9/banda2.jpg" style="width:100%">
+                      <img class="mySlides" src="s3/imagenes/galeria/fechas/salon3-9/banda3.jpg" style="width:100%">
+                      <img class="mySlides" src="s3/imagenes/galeria/fechas/salon3-9/banda4.jpg" style="width:100%">
+                      <img class="mySlides" src="s3/imagenes/galeria/fechas/salon3-9/banda5.jpg" style="width:100%">
+                      <img class="mySlides" src="s3/imagenes/galeria/fechas/salon3-9/banda6.jpg" style="width:100%">
+                      <img class="mySlides" src="s3/imagenes/galeria/fechas/salon3-9/banda7.jpg" style="width:100%">
+                      <img class="mySlides" src="s3/imagenes/galeria/fechas/salon3-9/banda8.jpg" style="width:100%">
 
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/fechas/salon3-9/banda8.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5></h5>
-                    </div>
-                </div>
-            </div>
-        </div>
+                      <div class="w3-row w3-black w3-center">
+                          <div class="w3-container w3-display-container">
+                              <p id="caption"></p>
+                              <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:2%" onclick="plusDivs(-1)">&#10094;</span>
+                              <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:98%" onclick="plusDivs(1)">&#10095;</span>
+                          </div>
+                          <div class="w3-col s3">
+                              <img class="demo w3-opacity w3-hover-opacity-off cursor" src="s3/imagenes/galeria/fechas/salon3-9/banda1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                          </div>
+                          <div class="w3-col s3">
+                              <img class="demo w3-opacity w3-hover-opacity-off cursor" src="s3/imagenes/galeria/fechas/salon3-9/banda2.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                          </div>
+                          <div class="w3-col s3">
+                              <img class="demo w3-opacity w3-hover-opacity-off cursor" src="s3/imagenes/galeria/fechas/salon3-9/banda3.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                          </div>
+                          <div class="w3-col s3">
+                              <img class="demo w3-opacity w3-hover-opacity-off cursor" src="s3/imagenes/galeria/fechas/salon3-9/banda4.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                          </div>
+                          <div class="w3-col s3">
+                              <img class="demo w3-opacity w3-hover-opacity-off cursor" src="s3/imagenes/galeria/fechas/salon3-9/banda5.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                          </div>
+                          <div class="w3-col s3">
+                              <img class="demo w3-opacity w3-hover-opacity-off cursor" src="s3/imagenes/galeria/fechas/salon3-9/banda6.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                          </div>
+                          <div class="w3-col s3">
+                              <img class="demo w3-opacity w3-hover-opacity-off cursor" src="s3/imagenes/galeria/fechas/salon3-9/banda7.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                          </div>
+                          <div class="w3-col s3">
+                              <img class="demo w3-opacity w3-hover-opacity-off cursor" src="s3/imagenes/galeria/fechas/salon3-9/banda8.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
 
     </body>
 </html>
