--- a/views/secciones/videos.erb
+++ b/views/secciones/videos.erb
@@ -18,6 +18,8 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cG5_PR79tJM"></iframe>
                 </div>
+            </div>
+            <div class="col-sm-6">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b44lVjxH4gU"></iframe>
                 </div>
