--- a/views/secciones/videos.erb
+++ b/views/secciones/videos.erb
@@ -13,22 +13,25 @@
         <br>
         <br>
 
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cG5_PR79tJM"></iframe>
+        <div class="container">
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cG5_PR79tJM"></iframe>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b44lVjxH4gU"></iframe>
+                    </div>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b44lVjxH4gU"></iframe>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_L0ahc4C2jk"></iframe>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_L0ahc4C2jk"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
