--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2037,5 +2037,5 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 /* Fuente para el menu */
 .menufont {
     font-size: 16px;
-font-family: 'Aclonica', sans-serif;
+    font-family: 'Lobster', cursive;
 }
