--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -25,8 +25,8 @@
                 </a>
 
             </li>
-            <li class="w3-hide-small w3-dropdown-hover ">
-                <a href="multimedia" class="w3-hover-none w3-padding-large menufont"title="Musica">
+            <li class="w3-hide-small w3-dropdown-hover menufont">
+                <a href="multimedia" class="w3-hover-none w3-padding-large" title="Musica">
                     <h4>Música</h4>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align menufont">
@@ -37,15 +37,15 @@
             </li>
 
             <li class="w3-hide-small w3-dropdown-hover menufont">
-                <a href="shows" class="w3-hover-none w3-padding-large menufont"Title="Shows">
+                <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
                     <h4>Shows</h4>
                 </a>
-                <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align menufont">
+                <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align ">
                     <a href="proximos">Próximos</a>
                     <a href="pasados">Pasados</a>
                 </div>
             </li>
-            <li class="w3-hide-small menufont">
+            <li class="w3-hide-small">
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
                     <h4>Nosotros</h4>
                 </a>
