--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2036,8 +2036,8 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 
 /* Fuente para el menu */
 .submenu {
-    font-size: 20px;
-    font-family: 'Lobster', cursive;
+    font-size: 18px;
+    font-family: 'Bangers', cursive;
 }
 
 .menuhome {
