--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2057,3 +2057,12 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     font-family: 'Bangers', cursive;
     color: #43962D;
 }
+
+.textoslide {
+    font-size: 40px;
+    font-family: 'Slackey', cursive;
+    color: #43962D;
+    color: -webkit-linear-gradient(#43962D 0%, #A32535 100%);
+    color: -o-linear-gradient(#43962D 0%, #A32535 100%);
+    color: linear-gradient(#43962D 0%, #A32535 100%);
+}
