--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2059,10 +2059,13 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 }
 
 .textoslide {
-    font-size: 40px;
-    font-family: 'Slackey', cursive;
-    color: #43962D;
-    color: -webkit-linear-gradient(#43962D 0%, #A32535 100%);
-    color: -o-linear-gradient(#43962D 0%, #A32535 100%);
-    color: linear-gradient(#43962D 0%, #A32535 100%);
+    font-size: 44px;
+    font-family: 'Flavors', cursive;
+    text-align: center;
+    color: #E96E1C;
+    color: -webkit-linear-gradient(#E96E1C 0%, #A32535 100%);
+    color: -o-linear-gradient(#E96E1C 0%, #A32535 100%);
+    color: linear-gradient(#E96E1C 0%, #A32535 100%);
+    display: block;
+
 }
