--- a/views/index.erb
+++ b/views/index.erb
@@ -38,7 +38,7 @@
             <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h2>
+                    <h2 class="textoslide">
                         <b>Buena Cosecha!</b>
                     </h2>
                 </div>
