--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2060,12 +2060,7 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 
 .textoslide {
     font-size: 44px;
-    font-family: 'Flavors', cursive;
-    text-align: center;
-    color: #E96E1C;
-    color: -webkit-linear-gradient(#E96E1C 0%, #A32535 100%);
-    color: -o-linear-gradient(#E96E1C 0%, #A32535 100%);
-    color: linear-gradient(#E96E1C 0%, #A32535 100%);
-    display: block;
-
+    font-family: 'Finger Paint', cursive;
+    text-align: left;;
+    color: #000000;
 }
