--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
         <meta name="google-site-verification" content="tZ29lnY9K77zk3P76FMVACpqZm1Aeiha3lukoAFjE9M"/>
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link href="https://fonts.googleapis.com/css?family=Bangers|Lato|Finger+Paint|Lobster|Flavors|Slackey" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bangers|Lato|Finger+Paint|" rel="stylesheet">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -48,6 +48,11 @@
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
                     <h4 class="menuhomeverde">Nosotros</h4>
                 </a>
+            </li>
+            <li class="w3-hide-small w3-center">
+                <h2 class="textoslide">
+                    <b>Buena Cosecha!</b>
+                </h2>
             </li>
             <!-- <li class="w3-hide-small w3-dropdown-hover">
                 <a href="mas" class="w3-hover-none w3-padding-large" title="Mas">
